--- a/builds/repair-shop/tsconfig.json
+++ b/builds/repair-shop/tsconfig.json
@@ -18,10 +18,17 @@
         "name": "next"
       }
     ],
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/db/index.js"
+  ],
   "exclude": ["node_modules"]
 }
